Update 'iuk8rni4s-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:f451c6b12ffa4064a0ecc0fd4a7677d1ee2360ab@sha256:5428fdfdaa0a2deb368c7aebabedc4dba66e1659eac7a07a5d9f3fad598afdfb

--- a/components/iuk8rni4s-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/iuk8rni4s-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: iuk8rni4s-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:f451c6b12ffa4064a0ecc0fd4a7677d1ee2360ab@sha256:5428fdfdaa0a2deb368c7aebabedc4dba66e1659eac7a07a5d9f3fad598afdfb
+          name: container-image
